<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
	>

	<TextView
		android:id="@+id/tv_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/title"
		android:textSize="25sp"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toTopOf="@+id/tv_aircraft"/>

	<TextView
		android:id="@+id/tv_aircraft"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/aircraft_f18"
		android:textSize="25sp"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tv_title" />

	<Button
		android:id="@+id/btn_1_fire"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:layout_marginStart="10dp"
		android:backgroundTint="@color/fire"
		android:textColor="@color/black"
		android:text="@string/fire"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tv_aircraft" />


	<Button
	android:id="@+id/btn_2_hydraulic"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/hydraulic"
	app:layout_constraintStart_toStartOf="@id/btn_1_fire"
	app:layout_constraintTop_toBottomOf="@+id/btn_1_fire" />

	<Button
	android:id="@+id/btn_3_ooc"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/ooc"
	app:layout_constraintStart_toStartOf="@id/btn_1_fire"
	app:layout_constraintTop_toBottomOf="@+id/btn_2_hydraulic" />

	<Button
	android:id="@+id/btn_4_abort"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/abort"
	app:layout_constraintStart_toStartOf="@id/btn_1_fire"
	app:layout_constraintTop_toBottomOf="@+id/btn_3_ooc" />

	<Button
	android:id="@+id/btn_5_gear"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/gear"
	android:layout_marginEnd="10dp"
	app:layout_constraintEnd_toEndOf="parent"
	app:layout_constraintTop_toTopOf="@id/btn_1_fire"/>

	<Button
		android:id="@+id/btn_6_electrical"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/electrical"
		app:layout_constraintEnd_toEndOf="@id/btn_5_gear"
		app:layout_constraintTop_toBottomOf="@id/btn_5_gear"/>

	<Button
		android:id="@+id/btn_7_engine"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/engine"
		app:layout_constraintEnd_toEndOf="@id/btn_5_gear"
		app:layout_constraintTop_toBottomOf="@+id/btn_6_electrical" />

	<Button
		android:id="@+id/btn_8_warn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="52dp"
		android:text="@string/warnings"
		app:layout_constraintEnd_toEndOf="@id/btn_5_gear"
		app:layout_constraintTop_toBottomOf="@+id/btn_6_electrical" />
</androidx.constraintlayout.widget.ConstraintLayout>
